# binance-async-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: README.md  binance_endpoints.rs  binance_save_all_trades.rs  binance_websockets.rs  endpoints.rs  ws.rs
src/: account.rs  client.rs  error.rs  errors.rs  general.rs  lib.rs  market.rs  model.rs  transport.rs  userstream.rs  util.rs  websockets.rs
src/client/: account.rs  general.rs  market.rs  mod.rs  userstream.rs  websocket.rs
src/model/: mod.rs  websocket.rs
tests/: get_account.rs  ping.rs
