[package]
name = "binance-async"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Weiyüen Wu <doomsplayer@gmail.com>"]

description = "Rust Library for the Binance API (Async)"
keywords = ["cryptocurrency", "trading", "binance", "async"]
documentation = "https://docs.rs/crate/binance-async"
repository = "https://github.com/dovahcrow/binance-async-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "dovahcrow/binance-async-rs" }

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
failure = "0.1"
log = "0.4"

tungstenite = "0.9"
tokio-tungstenite = { git = "https://github.com/dbcfd/tokio-tungstenite", branch = "tokio2", features = ["tls"] }

url = "2"
futures = { version = "0.3", features = ["compat"] }
headers = "0.3"
http = "0.2"
maplit = "1"
once_cell = "1"
pin-project = "0.4"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext" }
snafu = "*"
streamunordered = "0.5"
tokio = { version = "0.2", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }

serde = "1"
serde_json = "1"
serde_derive = "1"

hex = "0.3"
sha2 = "0.8"
hmac = "0.7"

[patch.crates-io]
reqwest = { git = "https://github.com/seanmonstar/reqwest" }

[dev-dependencies]
csv = "1"
dotenv = "0.13"
env_logger = "0.5"