[package]
name = "binance-async"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [
    "Flavio Oliveira <flavio@wisespace.io>",
    "Weiyüen Wu <doomsplayer@gmail.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]

description = "Rust Library for the Binance API (Async)"
keywords = ["cryptocurrency", "trading", "binance", "async"]
documentation = "https://docs.rs/crate/binance-async"
repository = "https://github.com/dovahcrow/binance-async-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "dovahcrow/binance-async-rs" }

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
failure = "0.1"
tracing = "0.1"

tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"] }

url = "2"
futures = "0.3"
headers = "0.3"
http = "0.2"
maplit = "1"
once_cell = "1"
reqwest = { version = "0.10", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext" }
snafu = "0.6"
streamunordered = "0.5"
tokio = { version = "0.2", features = ["tcp"] }

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

hex = "0.4"
sha2 = "0.8"
hmac = "0.7"

[dev-dependencies]
csv = "1"
tokio = { version = "0.2", features = ["full"] }
tracing-subscriber = "0.2"
