[package]
name = "binance-async"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [
    "Flavio Oliveira <flavio@wisespace.io>",
    "Weiyüen Wu <doomsplayer@gmail.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]

description = "Rust Library for the Binance API (Async)"
keywords = ["cryptocurrency", "trading", "binance", "async"]
documentation = "https://docs.rs/crate/binance-async"
repository = "https://github.com/dovahcrow/binance-async-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "dovahcrow/binance-async-rs" }

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
failure = "0.1.8"
tracing = "0.1.25"

tungstenite = "0.13.0"
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }

url = "2.2.1"
futures = "0.3.13"
headers = "0.3.4"
http = "0.2.4"
maplit = "1.0.2"
once_cell = "1.7.2"
reqwest = { version = "0.11.2", features = ["json"] }
reqwest-ext = { git = "https://github.com/utx0/reqwest-ext" }
snafu = "0.6.10"
streamunordered = "0.5.2"
tokio = { version = "1.4.0", features = ["full"] }

chrono = { version = "0.4.19", features = ["serde"] }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

hex = "0.4.3"
sha2 = "0.8"
hmac = "0.7"

[dev-dependencies]
csv = "1.1.6"
tokio = { version = "1.4.0", features = ["full"] }
tracing-subscriber = "0.2.17"
